@@ -1,5 +1,14 @@
 2002-12-19  Doug Evans  <dje@sebabeach.org>
 
+	* utils-sim.scm (gen-profile-sym): New fn.
+	(<operand>,sbuf-profile-sym): New method.
+	(<operand>,sbuf-profile-elm): Use it.
+	* sim.scm (<operand>,gen-record-profile): Use sbuf-profile-sym instead
+	of hardcoding symbol name.
+	(<operand>,gen-profile-code): Ditto.
+	(<unit>,gen-profile-code): Use gen-profile-sym instead of hardcoding
+	symbol name.
+
 	* mode.scm (mode-sem-mode): New fn.
 	* operand.scm (op:new-mode): Update. mode-name.
 	(op-natural-mode?) New fn.
